Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/Crypto_asset__c.object-meta.xml
<CustomObject>
    <label>Crypto Asset</label>
    <nameField>
        <label>Crypto Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crypto Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>