Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Buy_Price_BRL__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price_BRL__c</fullName>
    <label>Buy Price (BRL)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>