Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Crypto_Price_in_the_Day_BRL__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Price_in_the_Day_BRL__c</fullName>
    <label>Crypto Price in the Day (BRL)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>