Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Cryptocurrency__c.field-meta.xml
<CustomField>
    <fullName>Cryptocurrency__c</fullName>
    <label>Cryptocurrency</label>
    <referenceTo>Cryptocurrency__c</referenceTo>
    <relationshipLabel>Crypto Assets</relationshipLabel>
    <relationshipName>Crypto_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>