Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Cryptocurrency_price_in_BRL__c.field-meta.xml
<CustomField>
    <fullName>Cryptocurrency_price_in_BRL__c</fullName>
    <formula>Cryptocurrency__r.Price_in_BRL__c</formula>
    <label>Cryptocurrency price in BRL</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>