Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Cryptocurrency_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cryptocurrency_Quantity__c</fullName>
    <label>Cryptocurrency Quantity</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>