Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Current_Profit_BRL__c.field-meta.xml
<CustomField>
    <fullName>Current_Profit_BRL__c</fullName>
    <formula>(Cryptocurrency__r.Price_in_BRL__c - Crypto_Price_in_the_Day_BRL__c) /Crypto_Price_in_the_Day_BRL__c</formula>
    <label>Current Profit BRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>