Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Currenty_Price_BRL__c.field-meta.xml
<CustomField>
    <fullName>Currenty_Price_BRL__c</fullName>
    <formula>Cryptocurrency_Quantity__c *  Cryptocurrency_price_in_BRL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currenty Price BRL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>