Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>