Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/Order_day__c.field-meta.xml
<CustomField>
    <fullName>Order_day__c</fullName>
    <label>Order day</label>
    <type>Date</type>
</CustomField>