Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/fields/USDT_Price__c.field-meta.xml
<CustomField>
    <fullName>USDT_Price__c</fullName>
    <label>USDT Price ($1 in BRL)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>