Salesforce-Investiment/force-app/main/default/objects/Crypto_asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buy_Price_BRL__c</columns>
    <columns>Current_Profit_BRL__c</columns>
    <columns>Cryptocurrency_Quantity__c</columns>
    <columns>Cryptocurrency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>